--- a/labApps/hackerNewsApp/index.html
+++ b/labApps/hackerNewsApp/index.html
@@ -2,100 +2,23 @@
 	<head>
 	  <title>Hacker News</title>
 	  <link href="../styles/bootstrap.min.css" rel="stylesheet">
-	  <script src="../scripts/angular.min.js"></script>
 	  <link href="css/custom.css" rel="stylesheet" type="text/css">
 
-	  <script>
-	        function PostsController($scope) {
-	            $scope.posts = [
-	              { title : 'India - Tiger population sees 30% increase.',
-	                link : 'http://www.bbc.com/news/world-asia-30896028',
-	                username : 'jbloggs',
-	                upvotes : 10
-	              },
-	             { title : 'The button that is not.',
-	                link : 'http://blog.nuclearsecrecy.com/2014/12/15/button-isnt/',
-	                username : 'notme',
-	                upvotes : 12
-	              },
-	              { title : 'Google Nears $1B Investment in SpaceX',
-	                link : null,
-	                username : 'notme',
-	                upvotes : 12
-	              },
-	              { title : 'Coinbase Raises $75M from DFJ Growth, USAA, and More',
-	                link : 'http://blog.coinbase.com/post/108642362357/coinbase-raises-75m-from-dfj-growth-usaa-nyse',
-	                username : 'psmith',
-	                upvotes : 2
-	              }
-	            ]
-				$scope.incrementUpvotes = function(post) {
-				    post.upvotes += 1;
-				}
-				$scope.addPost = function(){
-		      	  $scope.posts.push({
-			            title: $scope.newPost.title,
-			            link: $scope.newPost.link,
-			            username : $scope.newPost.username,
-			            upvotes: 0
-			          })
-			          $scope.newPost = {} 
-		     	   }
-	       }
-	  </script>
+	  <script src="../scripts/angular.min.js"></script>
+	  <script type="text/javascript" src="../scripts/angular-route.min.js"></script>  
+	  
+	  
 	</head>
 	
-	<body ng-app >
+	<body ng-app="hackerNewsApp" >
 
-			<div class="container" ng-controller="PostsController">
-		      <div class="row">
-		        <div class="col-md-8 col-md-offset-2">
-		            <div class="page-header">
-		              <h1>Hacker News</h1>
-		            </div>
-		             <div ng-repeat="post in posts | orderBy:'+upvotes'">
-			            <span class="glyphicon glyphicon-thumbs-up"
-			                 ng-click="incrementUpvotes(post)"></span>
-		                     {{post.upvotes}}
-		                     <span class="main-text ">
-		                     <a ng-show="post.link != null" href="{{post.link}}">
-		                        {{post.title}}
-		                     </a>
-		                     <span ng-hide="post.link != null">
-		                       {{post.title}}
-		                     </span>
-		                    <span>
-		                        <a href="">Comments</a>
-		                    </span>
-		                </span>
-		            </div> 
-		       
-						<form name="postForm" novalidate ng-submit="addPost()"
-						                style="margin-top:30px;">
-						                <h4>Add a new post</h4>
-
-						                <div class="form-group">
-						                  <input type="text" name="title" 
-						                    class="form-control" placeholder="Title" 
-						                    ng-model="newPost.title" 
-						                    ng-required ng-minlength="3" ng-maxlength="100"></input>
-						                </div>
-						                <div class="form-group">
-						                  <input type="url" class="form-control" placeholder="Link"
-						                    ng-model="newPost.link"></input>
-						                </div>
-						                <div class="form-group">
-						                  <input type="text" name="username"
-						                  class="form-control" placeholder="Username"
-						                  ng-model="newPost.username" ng-required> </input>
-						                </div>
-						                <button type="submit" class="btn btn-primary"
-						                    ng-disabled="postForm.$pristine || (postForm.$dirty && postForm.$invalid) ">
-						                Post</button>
-						</form>
+			<div class="container">
+		        <div class="row">
+		           <div ng-view ></div>
+	            </div>
 	        </div>
-	      </div>
-	     </div>
+	    <script src="app.js"></script>
+        <script type="text/javascript" src="../scripts/angular-route.min.js"></script>   
 	    </body>
 	</body>
 	</html>
