added hacker news app week 5(continued)

--- a/labApps/hackerNewsApp/index.html
+++ b/labApps/hackerNewsApp/index.html
@@ -4,21 +4,23 @@
 	  <link href="../styles/bootstrap.min.css" rel="stylesheet">
 	  <link href="css/custom.css" rel="stylesheet" type="text/css">
 
-	  <script src="../scripts/angular.min.js"></script>
+	  <script type="text/javascript" src="../scripts/angular.min.js"></script>
 	  <script type="text/javascript" src="../scripts/angular-route.min.js"></script>  
 	  
-	  
+	       
 	</head>
 	
 	<body ng-app="hackerNewsApp" >
 
 			<div class="container">
 		        <div class="row">
-		           <div ng-view ></div>
+		           <div ng-view >
+
+		           </div>
 	            </div>
 	        </div>
 	    <script src="app.js"></script>
-        <script type="text/javascript" src="../scripts/angular-route.min.js"></script>   
+        
 	    </body>
 	</body>
 	</html>
